# liggghts-code

./: .gitignore  111.txt  3D_path_analysis.py  git_automator.py  readme.txt  虚拟机重新安装需要安装的.txt
Brachistochrone-LIGGGHTS-simulation-main/Brachistochrone-LIGGGHTS-simulation-main/: 新建 文本文档.txt
KNOW-NOW-main/KNOW-NOW-main/: README.md  contact_pressure_loop.yml  db-kmc.yml  db-know-now.yml  know_now.ipynb  number_variation.yml  number_variation_mono.yml  number_variation_normal.yml
KNOW-NOW-main/KNOW-NOW-main/WaNos/DB-Generator/: DB-Generator.xml  db_generator.py  environment.yml  git_file.yml  git_push.py  rendered_wano.yml  run_files.sh  setup_env.sh
KNOW-NOW-main/KNOW-NOW-main/WaNos/DataDive/: DataDive.xml  Liggghts_forces.yml  config.sh  datadive_results.yml  dem_stress_strain.py  forces.csv  rendered_wano.yml
KNOW-NOW-main/KNOW-NOW-main/WaNos/LIGGGHTS/: LIGGGHTS.xml  Matrize.stl  bottom_wall.stl  config.sh  createInput.py  csv_to_yaml.py  forces.csv  forces_inputs.yml  new2.stl  rendered_wano.yml  top_wall.stl
KNOW-NOW-main/KNOW-NOW-main/WaNos/Mult-It/: Mult-It.xml  config.sh
LIGGGHTS-main/LIGGGHTS-main/TestCases/TEST2/: in.chute_wear
LIGGGHTS_WEAR_problem-main/LIGGGHTS_WEAR_problem-main/: 1.txt  input - 副本.liggghts.txt  input.liggghts
LiggghtsCodesAndCase-master/LiggghtsCodesAndCase-master/src/: cohesion_model_easo_capillary_viscous.h
PostProcessingLiggghts-main/PostProcessingLiggghts-main/: .Test.c.kate-swp  .cproject  .gitignore  .project  CFStep.cpp  CFStep.cpp~  CMakeLists.txt  Calculs.cpp  Calculs.cpp~  Coarse.cpp  Coarse.cpp~  CoarseAdvanced.cpp  Compress.cpp  Dump.cpp  Dump.cpp~  FDump.cpp  FDump.cpp~  FStep.cpp  FStep.cpp~  Filter.cpp  Filter.cpp~  Gunzip.cpp  Ids.cpp  LDump.cpp  LStep.cpp  LStep.cpp~  LcfDump.cpp  LcfDump.cpp~  Main.cpp  Main.cpp~  Makefile  Makefile.debug  Multisphere.cpp  README.md  Ssh.cpp  Statistics.cpp  Step.cpp  Surface.cpp  Test.c  Test.cpp  (+18 more)
PostProcessingLiggghts-main/PostProcessingLiggghts-main/Debug/: Calculs.d  Coarse.d  Compress.d  Dump.d  Filter.d  Main.d  PostProcessing.tmp  Ssh.d  makefile  objects.mk  subdir.mk
PostProcessingLiggghts-main/PostProcessingLiggghts-main/Doc/: Documentation.aux  Documentation.tex  Documentation.tex.backup  Documentation.tex~  Documentation.toc  Documentation_OLD.tex  Dump.dot  Liggghts.dot  WritingScript  WritonfScript.ods
PostProcessingLiggghts-main/PostProcessingLiggghts-main/Headers/: Calculs.h  Calculs.h~  Coarse.h  Compress.h  Dump.h  Dump.h~  FDump.h  Filter.h  Gunzip.h  Ids.h  LDump.h  LcfDump.h  Main.h  MasterHeader.h  MasterHeader.h~  Multisphere.h  Ssh.h  Statistics.h  Step.h  Step.h~  Surface.h  Writing.h  Writing.h~
PostProcessingLiggghts-main/PostProcessingLiggghts-main/locale/: Files.md  postproc.pot
PostProcessingLiggghts-main/PostProcessingLiggghts-main/locale/en/: postproc.mo  postproc.po  postproc.po~
PostProcessingLiggghts-main/PostProcessingLiggghts-main/locale/en/LC_MESSAGES/: postproc.mo
PostProcessingLiggghts-main/PostProcessingLiggghts-main/locale/fr/: postproc.mo  postproc.po  postproc.po~
PostProcessingLiggghts-main/PostProcessingLiggghts-main/locale/fr/LC_MESSAGES/: postproc.mo
PostProcessingLiggghts-main/PostProcessingLiggghts-main/voro++-0.4.6/examples/basic/: import  platonic  random_points  single_cell
PostProcessingLiggghts-main/PostProcessingLiggghts-main/voro++-0.4.6/examples/custom/: cell_statistics  custom_output  radical
PostProcessingLiggghts-main/PostProcessingLiggghts-main/voro++-0.4.6/examples/degenerate/: degenerate  degenerate2
PostProcessingLiggghts-main/PostProcessingLiggghts-main/voro++-0.4.6/examples/extra/: box_cut  cut_region  irregular  superellipsoid
PostProcessingLiggghts-main/PostProcessingLiggghts-main/voro++-0.4.6/examples/interface/: find_voro_cell  loops  odd_even  polygons
PostProcessingLiggghts-main/PostProcessingLiggghts-main/voro++-0.4.6/examples/walls/: cylinder  frustum  tetrahedron  torus
PostProcessingLiggghts-main/PostProcessingLiggghts-main/voro++-0.4.6/src/: Test  Test.cpp  Test.gpl
RandomIdChoser-master/RandomIdChoser-master/: .gitignore  Readme.md  in.random_id_choser  pv_state.pvsm
RandomIdChoser-master/RandomIdChoser-master/meshes/: container_1.stl
Rising_BNE_simulation_LIGGGHTS-main/Rising_BNE_simulation_LIGGGHTS-main/RisingSim/: all_particles_6910000.txt  convection_0.003A120f - 副本 -统一insert_stream.txt  convection_0.003A120f - 副本.txt  sim_1.92r_1A30f - 副本.txt  sim_1.92r_1A30f _Gemini.txt
SCM_Research_Data-main/SCM_Research_Data-main/: README.md
SCM_Research_Data-main/SCM_Research_Data-main/Calibration/Mesh/INPUT/: in.cal_mesh_walls_30X
SCM_Research_Data-main/SCM_Research_Data-main/Calibration/Mesh/OUTPUT/: dump.atom_info_ac_10000  dump.atom_info_ac_100000  dump.atom_info_ac_105000  dump.atom_info_ac_110000  dump.atom_info_ac_115000  dump.atom_info_ac_120000  dump.atom_info_ac_15000  dump.atom_info_ac_20000  dump.atom_info_ac_25000  dump.atom_info_ac_30000  dump.atom_info_ac_35000  dump.atom_info_ac_40000  dump.atom_info_ac_45000  dump.atom_info_ac_50000  dump.atom_info_ac_55000  dump.atom_info_ac_60000  dump.atom_info_ac_65000  dump.atom_info_ac_70000  dump.atom_info_ac_75000  dump.atom_info_ac_80000  log.liggghts  (+4 more)
SCM_Research_Data-main/SCM_Research_Data-main/Calibration/Prep_and_Results/: PACCCK_Calibration.mlx  Prep_and_Results_Calibration.xlsx  gmsh_cal_mesh.geo
SCM_Research_Data-main/SCM_Research_Data-main/Centrifugation/Prep_and_Results/: CalcPrimitive.mlx  Prep_and_Results_Centrifugation.xlsx
bne-master/bne-master/: in - 副本.bne0.txt
ligggghts-stirred-mill-template-main  attritor/ligggghts-stirred-mill-template-main/Inputs/: input.liggghts
(+1339 files in other folders)
